<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App -->
    <string name="app_name">BHomeAlarm</string>

    <!-- Titles -->
    <string name="title_home">Home</string>
    <string name="title_settings">Impostazioni</string>
    <string name="title_configuration">Configurazione</string>
    <string name="title_users">Utenti</string>
    <string name="title_scenarios">Scenari</string>
    <string name="title_zones">Seleziona Zone</string>
    <string name="title_log">Cronologia SMS</string>

    <!-- Status -->
    <string name="status_label">Sistema</string>
    <string name="status_armed">ATTIVO</string>
    <string name="status_disarmed">DISATTIVO</string>
    <string name="status_alarm">ALLARME</string>
    <string name="status_tamper">MANOMISSIONE</string>
    <string name="status_unknown">Sconosciuto</string>
    <string name="status_icon">Icona stato</string>

    <!-- Actions -->
    <string name="action_arm">Attiva Allarme</string>
    <string name="action_arm_desc">Seleziona scenario</string>
    <string name="arm_icon">Icona attiva</string>
    <string name="action_disarm">Disattiva</string>
    <string name="action_disarm_desc">Spegni sistema</string>
    <string name="disarm_icon">Icona disattiva</string>
    <string name="action_status">Verifica Stato</string>
    <string name="action_status_desc">Controlla sistema</string>
    <string name="action_settings">Impostazioni</string>
    <string name="action_cancel">Annulla</string>
    <string name="action_start">Avvia</string>
    <string name="action_save">Salva</string>
    <string name="action_continue">Continua</string>
    <string name="action_clear_log">Cancella cronologia</string>
    <string name="action_dismiss">Chiudi</string>
    <string name="action_ok">OK</string>
    <string name="action_yes">Si</string>
    <string name="action_no">No</string>
    <string name="action_close">Chiudi</string>
    <string name="action_retry">Riprova</string>
    <string name="action_clear">Cancella</string>
    <string name="action_delete">Elimina</string>

    <!-- Settings Sections -->
    <string name="section_configuration">Configurazione</string>
    <string name="section_management">Gestione</string>
    <string name="section_sim">SIM</string>
    <string name="section_info">Informazioni</string>

    <!-- Settings Items -->
    <string name="setting_phone_number">Numero allarme</string>
    <string name="setting_configure">Configura sistema</string>
    <string name="setting_configure_desc">Scarica CONF1-5</string>
    <string name="setting_users">Utenti</string>
    <string name="setting_users_desc">Gestisci rubrica</string>
    <string name="setting_scenarios">Scenari</string>
    <string name="setting_sim">SIM per invio</string>
    <string name="setting_info">Informazioni</string>
    <string name="not_configured">Non configurato</string>
    <string name="scenarios_count_default">16 scenari</string>
    <string name="sim_default">SIM predefinita</string>
    <string name="version_default">Versione 1.0.1</string>
    <string name="version_format">Versione %s</string>
    <string name="sim_slot_format">SIM %d</string>
    <string name="sim_slot_1">SIM 1</string>
    <string name="sim_slot_2">SIM 2</string>
    <string name="hint_phone_number">Es. +39123456789</string>
    <string name="info_message">BHomeAlarm v%s\n\nApplicazione per il controllo di sistemi di allarme Bticino via SMS.\n\nSviluppato per uso personale.</string>
    <string name="last_check_format">Ultimo controllo: %s</string>

    <!-- Configuration -->
    <string name="config_waiting">In attesa di avvio…</string>
    <string name="config_steps">Dettaglio operazioni</string>
    <string name="config_debug">Debug</string>
    <string name="config_sending">Invio richiesta…</string>
    <string name="config_receiving">Ricezione risposta…</string>
    <string name="config_complete">Configurazione completata!</string>
    <string name="config_error">Errore durante la configurazione</string>
    <string name="config_running">In corso…</string>
    <string name="percent_format">%d%%</string>

    <!-- Users -->
    <string name="users_empty">Nessun utente</string>
    <string name="users_empty_desc">Esegui la configurazione per scaricare la rubrica utenti</string>
    <string name="user_slot">Utente %d</string>
    <string name="user_joker">Joker</string>

    <!-- Scenarios -->
    <string name="scenarios_predefined">Scenari Predefiniti</string>
    <string name="scenarios_custom">Personalizzato</string>
    <string name="scenario_custom_title">Crea scenario</string>
    <string name="scenario_custom_desc">Seleziona zone manualmente</string>
    <string name="scenario_zones">Zone: %s</string>

    <!-- Zones -->
    <string name="zones_instruction">Seleziona le zone da includere nello scenario personalizzato</string>
    <string name="zone_name">Zona %d - %s</string>
    <string name="zones_selected">%d zone selezionate</string>
    <string name="zones_none_selected">Nessuna zona selezionata</string>
    <string name="hint_scenario_name">Nome scenario</string>
    <string name="error_scenario_name_required">Inserisci un nome per lo scenario</string>
    <string name="error_zones_required">Seleziona almeno una zona</string>
    <string name="scenario_saved">Scenario salvato</string>
    <string name="dialog_arm_after_save_title">Armare ora?</string>
    <string name="dialog_arm_after_save_message">Lo scenario \"%s\" è stato salvato. Vuoi attivare l\'allarme adesso?</string>
    <string name="title_create_scenario">Crea Scenario</string>
    <string name="dialog_delete_scenario_title">Elimina Scenario</string>
    <string name="dialog_delete_scenario_message">Eliminare lo scenario \"%s\"?</string>
    <string name="scenario_deleted">Scenario eliminato</string>

    <!-- Log -->
    <string name="log_empty">Nessun messaggio</string>
    <string name="log_direction_tx">Inviato</string>
    <string name="log_direction_rx">Ricevuto</string>
    <string name="log_direction_outgoing">Inviato</string>
    <string name="log_direction_incoming">Ricevuto</string>
    <string name="log_status_sent">Inviato</string>
    <string name="log_status_delivered">Consegnato</string>
    <string name="log_status_received">Ricevuto</string>
    <string name="log_status_pending">In attesa</string>
    <string name="log_status_failed">Errore</string>
    <string name="log_status_error">Errore</string>
    <string name="log_detail_format">Direzione: %1$s\n\nMessaggio:\n%2$s\n\nStato: %3$s</string>
    <string name="logs_cleared">Cronologia cancellata</string>

    <!-- Dialogs -->
    <string name="dialog_confirm_disarm_title">Conferma</string>
    <string name="dialog_confirm_disarm_message">Vuoi disattivare l\'allarme?</string>
    <string name="dialog_sim_title">Seleziona SIM</string>
    <string name="dialog_sim_remember">Ricorda scelta</string>
    <string name="dialog_send">Invia</string>
    <string name="dialog_disarm_title">Disattiva Allarme</string>
    <string name="dialog_disarm_message">Confermi di voler disattivare l\'allarme?</string>
    <string name="dialog_phone_title">Numero Allarme</string>
    <string name="dialog_arm_title">Attiva Allarme</string>
    <string name="dialog_arm_message">Attivare allarme con scenario \"%s\"?</string>
    <string name="dialog_arm_custom_title">Attiva Personalizzato</string>
    <string name="dialog_arm_custom_message">Attivare allarme con %d zone selezionate?</string>
    <string name="dialog_cancel_config_title">Annulla Configurazione</string>
    <string name="dialog_cancel_config_message">La configurazione non è completa. Annullare?</string>
    <string name="dialog_log_detail_title">Dettaglio Messaggio</string>
    <string name="dialog_clear_logs_title">Cancella Cronologia</string>
    <string name="dialog_clear_logs_message">Eliminare tutti i messaggi dalla cronologia?</string>

    <!-- User Permissions -->
    <string name="permissions_description">Seleziona i permessi da assegnare a questo utente</string>
    <string name="permission_rx1">RX1 - Riceve SMS allarme</string>
    <string name="permission_rx2">RX2 - Riceve SMS stato</string>
    <string name="permission_verify">VERIFY - Verifica stato</string>
    <string name="permission_cmd">CMD - Comandi ON/OFF</string>
    <string name="apply_to_all_users">Applica a tutti gli utenti</string>
    <string name="user_slot_title">Utente %d</string>
    <string name="scenario_slot_title">Scenario %d</string>

    <!-- App Permissions -->
    <string name="permission_sms_title">Permessi SMS</string>
    <string name="permission_sms_message">L\'app necessita dei permessi SMS per comunicare con il sistema allarme</string>
    <string name="permission_grant">Concedi</string>

    <!-- Errors -->
    <string name="error_generic">Si è verificato un errore</string>
    <string name="error_sms_send">Errore invio SMS</string>
    <string name="error_sms_timeout">Timeout: nessuna risposta ricevuta</string>
    <string name="error_no_phone">Numero allarme non configurato</string>
    <string name="error_no_permission">Permessi non concessi</string>
    <string name="permissions_required">Alcuni permessi sono necessari per il funzionamento dell\'app</string>

    <!-- Notifications -->
    <string name="notification_channel_alarm">Allarme</string>
    <string name="notification_channel_sms">Stato SMS</string>

    <!-- Widget -->
    <string name="widget_description">Attiva o disattiva l\'allarme dalla home</string>
    <string name="widget_arm">Attiva</string>
    <string name="widget_sms_sent">Comando inviato</string>

    <!-- Content Descriptions -->
    <string name="cd_navigate_back">Torna indietro</string>
    <string name="cd_status_armed">Sistema attivo</string>
    <string name="cd_status_disarmed">Sistema disattivo</string>

    <!-- Disclaimer -->
    <string name="title_disclaimer">Termini d\'Uso</string>
    <string name="disclaimer_title">Importante</string>
    <string name="disclaimer_text">BHomeAlarm è un\'applicazione non ufficiale per il controllo di sistemi di allarme compatibili tramite SMS.\n\nL\'utilizzo di questa applicazione è a proprio rischio. Lo sviluppatore non si assume alcuna responsabilità per:\n\n• Malfunzionamenti del sistema di allarme\n• Mancata ricezione o invio di comandi SMS\n• Eventuali danni diretti o indiretti derivanti dall\'utilizzo dell\'applicazione\n• Costi SMS addebitati dal proprio operatore telefonico\n\nL\'applicazione richiede i permessi per inviare e ricevere SMS per comunicare con il sistema di allarme.\n\nAssicurarsi che il numero di telefono del sistema allarme sia corretto prima di inviare comandi.</string>
    <string name="disclaimer_accept_checkbox">Ho letto e accetto i termini d\'uso</string>
    <string name="action_decline">Rifiuta</string>
    <string name="action_accept">Accetta</string>
    <string name="dialog_decline_title">Chiudi Applicazione</string>
    <string name="dialog_decline_message">Rifiutando i termini d\'uso l\'applicazione verrà chiusa. Continuare?</string>

    <!-- Setup Phone -->
    <string name="title_setup_phone">Configurazione</string>
    <string name="setup_phone_title">Numero Sistema Allarme</string>
    <string name="setup_phone_description">Inserisci il numero di telefono della SIM installata nel tuo sistema di allarme. Questo numero verrà utilizzato per inviare e ricevere comandi SMS.</string>
    <string name="hint_alarm_phone">Numero telefono allarme</string>
    <string name="action_pick_contact">Seleziona dalla rubrica</string>
    <string name="setup_phone_hint">Puoi modificare questo numero in qualsiasi momento dalle impostazioni dell\'app.</string>
    <string name="action_skip">Salta</string>
    <string name="error_invalid_phone">Numero di telefono non valido</string>
    <string name="error_contacts_permission">Permesso rubrica non concesso</string>
    <string name="error_reading_contact">Errore lettura contatto</string>
</resources>
